fix vertical alignment of the table container.

--- a/css/style.css
+++ b/css/style.css
@@ -22,23 +22,43 @@ a:hover {
   cursor: pointer;
 }
 
-
-.service {
-
+.service-view {
   display: flex;
   align-items: center;
-  
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  padding: 2rem 0;
+}
+
+
+
+
+.service-container {
+  display: flex;
+  flex-direction: column;
+  align-self: flex-start;
+  box-shadow: 0 .4rem .8rem #0005;
+  border-radius: .8rem;
+  height: fit-content;
   width: fit-content;
-  max-width: 90%;
+  max-height: 80%;
+  max-width: 80%;
+  overflow: auto;
+  
+  /* align-items: center; */
+  /* width: fit-content; */
+  /* max-width: 90%; */
   /* overflow-x: hidden; */
   /* overflow-y: overlay; */
   /* min-height: 50vh; */
-  box-shadow: 0 0.4rem 0.8rem #0005;
-  border-radius: 0.8rem;
-  margin: 80px auto;
+  /* box-shadow: 0 0.4rem 0.8rem #0005; */
+  /* border-radius: 0.8rem; */
+  /* margin: 80px auto; */
   /* overflow-y: auto; */
-  flex-direction: column;
+  
   /* overflow: hidden; */
+  
 }
 
 
